Student/Resources/Challenge 9/template-web-ingress-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: whatthehackmsft/content-web
        name: web
        tty: true
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: web
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: aks-helloworld.YOUR_AKS_DNS_ID.YOUR_AKS_REGION.aksapp.io
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
        path: /
